# fixer

./: CMakeLists.txt  LogonMessage.cpp  Message.h  README.md  main.cpp  manage.py  old_main.cpp  requirements.txt  test_main.cpp
.github/workflows/: main.yml
src/: FixSession.cpp  FixSession.h  FixUtil.cpp  LogonMessage.cpp  LogonMessage.h  Message.h  NewOrderSingle.cpp  NewOrderSingle.h  TestableFixSession.cpp  TestableFixSession.h  main.cpp
tests/: test_main.cpp
